style.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

.body-container {
    display: grid;
    grid-template-columns: 1fr 5fr;
    grid-template-rows: 1fr 6fr;
    width: 100%;
    height: 100vh;
}

.sidebar {
    grid-row: 1/3;
    background-color: rgb(0,117,176);
}

.sidebar-items {
    display: grid;
    padding: 1em;
    margin: 2em 1em;
    color: aliceblue;
    gap: 20px;
}

.sidebar-items > h2 {
    display: grid;
    grid-template-columns: 1fr 3fr;
    align-items: center;
}

.sidebar-items > a {
    display: grid;
    grid-template-columns: 1fr 3fr;
    align-items: center;
    color: aliceblue;
    font-weight: 500;
    text-decoration: none;
}


.header {
    display: grid;
    grid-template-columns: 1fr 1.5fr 1fr 0.6fr;
    grid-column-start: 2;
    grid-row-start: 1;
    padding: 1em;
    box-shadow: 0px 5px 5px burlywood;
    z-index: 1;
}

.header-item1{
    display:grid;
    grid-template-columns: 0.5fr 2fr;
    align-items: center;
    grid-column-start: 1;
}

.header-item2 {
    display:grid;
    grid-template-columns: 0.4fr 6fr;
    align-items: center;
}

input {
    border: none;
    background-color: gainsboro;
    border-radius: 20px;
    width: 80%;
    height: minmax(50%,200px);
    padding: 10px;
}

.header-item3 {
    display:grid;
    grid-template-columns: repeat(3,1fr);
    align-items: center;
    grid-column-start: 3;
}

button {
    height: 40px;
    width: 80px;
    border-radius: 20px;
    background-color: rgb(0,117,176);
    color:aliceblue;
    font-weight: 500;
}


.header-item4 {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    justify-items: center;
    align-items: center;
}


.main-content {
    display:grid;
    grid-template-columns: 3fr 1fr;
    grid-column-start: 2;
    grid-row-start: 2;
    background-color: gainsboro;
    padding: 1em;
    z-index: 0;
}

.projects-container {
    grid-row: 1/3;
    padding: 1em;
    margin: 1em 0;
}

.project-items {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
    height: 90%;
    gap: 20px;
    margin: 1em 0;
}

.project-items > div {
    display:grid;
    grid-template-rows: 3fr 1fr;
    background-color: whitesmoke;
    border-radius: 10px;
    padding: 1em;
}

.action-keys {
    display:grid;
    grid-template-columns: 5fr repeat(3,1fr);
    grid-template-rows: 1fr;
}

.announcements-container {
    grid-column: 2/3;
    padding: 1em;
    margin: 1em 0;
}

.announcements-items {
    display: grid;
    grid-template-rows: repeat(3, 1fr);
    background-color: whitesmoke;
    border-radius: 10px;
    gap: 20px;
    height: 80%;
    margin: 1em 0;
    padding: 1em;
}

.trending-container {
    grid-column: 2/3;
    padding: 1em;
    margin: 1em 0;
}

.trending-items {
    display: grid; 
    grid-template-rows: repeat(4,1fr);
    background-color: whitesmoke;
    border-radius: 10px;
    gap: 20px;
    height: 80%;
    margin: 1em 0;
    padding: 1em;
}

.trending-items > a {
    display:grid;
    grid-template-columns: 1fr 2fr;
    grid-template-rows: 1fr 1fr;
}

.profile-photo {
    grid-row: 1/3;
}

.icons:hover {
    cursor: pointer;
}

button:hover {
    cursor: pointer;
}

